--- a/inspire.html
+++ b/inspire.html
@@ -4,7 +4,7 @@
         <title>Inspire Me</title>
     </head>
     <body>
-        <h1>My Parents</h1>
+        <h1>My Parents: The True Definition of a Hero</h1>
         <h2>Why are my parents my heroes?</h2>
         <p>To me. my parents are the perfect example/definition of a hero.</p>
         <p>The reason that I admire these two marvelous and beautiful people, is because they are the best role models ever.</p>
