--- a/inspire.html
+++ b/inspire.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>My Parents: The True Definition of a Hero</h1>
+        
         <h2>Why are my parents my heroes?</h2>
         <p>To me. my parents are the perfect example/definition of a hero.</p>
         <p>The reason that I admire these two marvelous and beautiful people, is because they are the best role models ever.</p>
@@ -15,7 +16,7 @@
         <p>They are one of the top reasons, that I decided to pursue another degree after graduating with a Bachelor's in Biology.</p>
         <p>I was given the luxury of being able to become a software engineering major, and that is all thanks to them.</p>
         <p>Without their help, I probably would have been able to do it.</p>
-        <p>I am beyond blessed to not only call these people my parents, but also my <strong>HEROES</strong>.</p>
+        <p>I am beyond blessed to not only call these people my parents, but also my <strong><h1><HEROES/h1></strong>.</p>
         
     </body>
 </html>
