--- a/inspire.html
+++ b/inspire.html
@@ -15,7 +15,7 @@
         <p>They are one of the top reasons, that I decided to pursue another degree after graduating with a Bachelor's in Biology.</p>
         <p>I was given the luxury of being able to become a software engineering major, and that is all thanks to them.</p>
         <p>Without their help, I probably would have been able to do it.</p>
-        <p>I am beyond blessed to not only call these people my parents, but also my <strong><h1><HEROES/h1></strong>.</p>
+        <p>I am beyond blessed to not only call these people my parents, but also my <strong>HEROES</strong>.</p>
         
     </body>
 </html>
