--- a/amuse.html
+++ b/amuse.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8>
-    <title>TEMPLATE</title>  
+    <title>TEMPLATE</title>
+      <h1>name</h1>
+      <section>
+      
+      </section>
   </head>
   <body>
     <h1>Page Title</h1>
