--- a/amuse.html
+++ b/amuse.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8>
     <title>TEMPLATE</title>
-      <h1>name</h1>
+      <h1>Amuse Me</h1>
       <section>
       
       </section>
   </head>
   <body>
-    <h1>Page Title</h1>
+    <h1>Funny Things Online</h1>
   </body>
 </html> 
