--- a/amuse.html
+++ b/amuse.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>TEMPLATE</title>
+    <title>Amuse Me</title>
   </head>
   <body>
     <h1>Funny Things Online</h1>
+    <h3>By: Carina Fierro</h3>
   </body>
 </html> 
