--- a/amuse.html
+++ b/amuse.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Funny Things Online</h1>
     <h3>By: Carina Fierro</h3>
+    <h2>Stand Up Comedian</h2>
+    <p>I originally saw this skit on <em>Facebook</em> as a cartoon, but recently I saw the actual <em>YouTube</em> video. This video is hilarious to me, because of the way the comedian, Anjelah Johnson, narrates/acts out her experience at a nail salon. </p>
   </body>
 </html> 
