--- a/amuse.html
+++ b/amuse.html
@@ -11,5 +11,9 @@
     <p>I originally saw this skit on <em>Facebook</em> as a cartoon, but recently I saw the actual <em>YouTube</em> video. This video is hilarious to me, because of the way the comedian, Anjelah Johnson, narrates/acts out her experience at a nail salon. </p>
     <a href="https://www.youtube.com/watch?v=baDJ-ZIvYy0"> Nail Skit Comedy</a>
     <a href ="https://www.youtube.com/watch?v=92fD8Cy2zL0"> Nail Skit in Cartoon Version</a>
+
+    <h2>This Actress Always Makes Me Laugh!</h2>
+    <p>I remember always watching<em>Mad Tv</em> when I was younger. Mrs. Swan was my favorite actress to watch, she was just super funny!</p>
+    <a href="https://www.youtube.com/watch?v=icrjok_q1UY"> Mrs. Swan goes to the movie theatre</a>
   </body>
 </html> 
