--- a/amuse.html
+++ b/amuse.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>Funny Things Online</h1>
-    <h3>By: Carina Fierro</h3>
+    <br><h3>By: Carina Fierro</h3></br>
     <h2>Stand Up Comedian</h2>
     <p>I originally saw this skit on <em>Facebook</em> as a cartoon, but recently I saw the actual <em>YouTube</em> video. This video is hilarious to me, because of the way the comedian, Anjelah Johnson, narrates/acts out her experience at a nail salon. </p>
-    <a href="https://www.youtube.com/watch?v=baDJ-ZIvYy0"> Nail Skit Comedy</a><br>
+    <br><a href="https://www.youtube.com/watch?v=baDJ-ZIvYy0"> Nail Skit Comedy</a></br>
     <a href ="https://www.youtube.com/watch?v=92fD8Cy2zL0"> Nail Skit in Cartoon Version</a>
 
     <h2>This Actress Always Makes Me Laugh!</h2>
