--- a/profile.html
+++ b/profile.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Carina Fierro</title>  
+    <title>Profile</title>  
   </head>
   <body>
-    <h1>Page Title</h1>
+    <h1>Carina Fierro</h1>
       <img src="https://www.carinafierro.github.io/" alt="">
   </body>
 </html> 
