--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Carina Fierro</h1>
-      <img src="https://www.carinafierro.github.io/avatar character" alt="">
+      <img src="https://www.carinafierro.github.io/avatar character.jpg" alt="avatar character">
     <p>I love listening to music at any time. My last name in spanish means "iron", which I think is super unique! I am the only one in my family that is going for their second Bachelor's degree.</p>
   </body>
 </html> 
