--- a/movies.html
+++ b/movies.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Favorite Movies</title>  
+  </head>
+  <body>
+    <h1>Favorite Movies</h1>
+    <ul>
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Description</th>
+          <th>Poster</th>
+        </tr>
+      </table>
+    </ul>
+  </body>
+</html> 
