--- a/movies.html
+++ b/movies.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Favorite Movies</h1>
     <ul>
+      <li>Dumb and Dumber</li>
+      <li>Lord of the Rings</li>
+      <li>A Beautiful Mind</li>
       <table>
         <tr>
           <th>Title</th>
