--- a/movies.html
+++ b/movies.html
@@ -2,22 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Favorite Movies</title>  
+    <title>Favorite Movies</title>
+    <style>
+      table, th, td {
+        border: 4px solid black;
+      }
+    </style>  
   </head>
   <body>
     <h1>Favorite Movies</h1>
-    <ul>
-      <li>Dumb and Dumber</li>
-      <li>Lord of the Rings</li>
-      <li>A Beautiful Mind</li>
-      <table>
+    
+    <table>
+      <thead>
         <tr>
           <th>Title</th>
           <th>Year</th>
+          <th>Rating</th>
           <th>Description</th>
           <th>Poster</th>
         </tr>
-      </table>
-    </ul>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Dumb and Dumber</th>
+          <td>1994</td>
+          <td>10</td>
+          <td>A really funny and dumb movie.</td>
+          <td><img height="175px" src= </td>
+        </tr>
+          <th>Lord of the Rings: Fellowship of the Ring</th>
+          <td>2002</td>
+          <td>10</td>
+          <td>A really serious fantasy movie.</td>
+          <td><img height="175px" src=</td>
+        </tr>
+      </tbody>
+    </table>g
   </body>
 </html> 
