--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello my name is Carina.
+<html>
+    <head>
+        <title>Homepage</title>
+    </head>
+    <body>
+        <h1>My Homepage</h1>
+        <img scr="logo.png" alt="UNC Logo"
+        <ul>
+            <li><a href="inspire.html">Inspiration Page</a></li>
+            <li><a href="profile.html">Profile Page</a></li>
+            <li><a href="amuse.html">Amusement Page</a></li>
+
+        </ul>
+
+
+    </body>
+</html>
