--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Homepage</title>
     </head>
     <body>
         <h1>My Homepage</h1>
-        <img scr="logo.png" alt="UNC Logo"
+        <img scr="logo.png" alt="UNC Logo">
         <ul>
             <li><a href="inspire.html">Inspiration Page</a></li>
             <li><a href="profile.html">Profile Page</a></li>
