--- a/test.html
+++ b/test.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>TEMPLATE</title>  
+    <title>Test Page</title>  
   </head>
   <body>
-    <h1>Page Title</h1>
+    <h1>Testing</h1>
+    <table>
+      <tr>
+        <th>Page Name</th>
+        <th>Url</th>
+        <th>Validation</th>
+      </tr>
+    </table>
   </body>
 </html> 
