--- a/test.html
+++ b/test.html
@@ -12,6 +12,11 @@
         <th>Url</th>
         <th>Validation</th>
       </tr>
+      <tr>
+        <th>Template</th>
+        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
+        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
+      </tr>
     </table>
   </body>
 </html> 
