--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
         <th>Template</th>
         <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
         <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
+        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
       </tr>
     </table>
   </body>
