--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     </head>
     <body>
         <h1>My Homepage</h1>
-        <img scr="logo.png" alt="UNC Logo">
+        <img src="logo.png" alt="UNC Logo">
         <ul>
             <li><a href="inspire.html">Inspiration Page</a></li>
             <li><a href="profile.html">Profile Page</a></li>
             <li><a href="amuse.html">Amusement Page</a></li>
-
         </ul>
-
-
     </body>
 </html>
