--- a/test.html
+++ b/test.html
@@ -13,10 +13,19 @@
         <th>Validation</th>
       </tr>
       <tr>
-        <th>Template</th>
-        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
-        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
-        <td><a href="https://carinafierro.github.io/template.html">https://carinafierro.github.io</a></td>
+        <th>Inspire Page</th>
+        <td><a href="https://carinafierro.github.io/inspire.html">"https://carinafierro.github.io/inspire.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Finspire.html">VALIDATE</a></td>
+      </tr>
+      <tr>
+        <th>Profile Page</th>
+        <td><a href="https://carinafierro.github.io/template.html">"https://carinafierro.github.io/template.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Fprofile.html">VALIDATE</a></td>
+      </tr>
+      <tr>
+        <th>Amuse Page</th>
+        <td><a href="https://carinafierro.github.io/amuse.html">"https://carinafierro.github.io/amuse.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Famuse.html">VALIDATE</a></td>
       </tr>
     </table>
   </body>
