--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>My Homepage</h1>
-        <img src="logo.png" alt="UNC Logo">
+        <img src="images/logo.png" alt="UNC Logo">
         <ul>
             <li><a href="inspire.html">Inspiration Page</a></li>
             <li><a href="profile.html">Profile Page</a></li>
