--- a/inspire.html
+++ b/inspire.html
@@ -16,6 +16,6 @@
         <p>I was given the luxury of being able to become a software engineering major, and that is all thanks to them.</p>
         <p>Without their help, I probably would have been able to do it.</p>
         <p>I am beyond blessed to not only call these people my parents, but also my <strong>HEROES</strong>.</p>
-        
+        <a href="index.html"><img height="55" src="images/button_home.png" alt="HOME"></a>
     </body>
 </html>
