--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Carina Fierro</h1>
-    <img src="https://carinafierro.github.io/avatarcharacter.jpg" alt="avatar character" height="200">
+    <img src="images/avatarcharacter.jpg" alt="avatar character" height="200">
     <p>I love listening to music at any time. My top favorite singer is Drake. My last name in spanish means "iron", which I think is super unique! I am the only one in my family that is going for their second Bachelor's degree.</p>
+    <br>
+    <a href="index.html"><img height="55" src="images/button_home.png" alt="HOME"></a>
   </body>
 </html> 
