--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
       </tr>
       <tr>
         <th>Profile Page</th>
-        <td><a href="https://carinafierro.github.io/profile.html">"https://carinafierro.github.io/template.html"</a></td>
+        <td><a href="https://carinafierro.github.io/profile.html">"https://carinafierro.github.io/profile.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Fprofile.html">VALIDATE</a></td>
       </tr>
       <tr>
