--- a/test.html
+++ b/test.html
@@ -27,6 +27,16 @@
         <td><a href="https://carinafierro.github.io/amuse.html">"https://carinafierro.github.io/amuse.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Famuse.html">VALIDATE</a></td>
       </tr>
+      <tr>
+        <th>Template Page</th>
+        <td><a href="https://carinafierro.github.io/template.html">"https://carinafierro.github.io/template.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Ftemplate.html">VALIDATE</a></td>
+      </tr>
+      <tr>
+        <th>Home Page</th>
+        <td><a href="https://carinafierro.github.io/index.html">"https://carinafierro.github.io/index.html"</a></td>
+        <td><a href="">VALIDATE</a></td>
+      </tr>
     </table>
   </body>
 </html> 
