--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
       <tr>
         <th>Home Page</th>
         <td><a href="https://carinafierro.github.io/index.html">"https://carinafierro.github.io/index.html"</a></td>
-        <td><a href="">VALIDATE</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Findex.html">VALIDATE</a></td>
       </tr>
     </table>
   </body>
