--- a/test.html
+++ b/test.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Test Page</title>  
+    <title>Test Page</title>
+    <link href="css/style.css" rel="stylesheet">  
   </head>
   <body>
-    <h1>Testing</h1>
+    <h1 id="testing">Testing</h1>
     <table>
       <tr>
         <th>Page Name</th>
@@ -13,30 +14,32 @@
         <th>Validation</th>
       </tr>
       <tr>
-        <th>Inspire Page</th>
+        <th class="rowheader">Inspire Page</th>
         <td><a href="https://carinafierro.github.io/inspire.html">"https://carinafierro.github.io/inspire.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Finspire.html">VALIDATE</a></td>
       </tr>
       <tr>
-        <th>Profile Page</th>
+        <th class="rowheader">Profile Page</th>
         <td><a href="https://carinafierro.github.io/profile.html">"https://carinafierro.github.io/profile.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Fprofile.html">VALIDATE</a></td>
       </tr>
       <tr>
-        <th>Amuse Page</th>
+        <th class="rowheader">Amuse Page</th>
         <td><a href="https://carinafierro.github.io/amuse.html">"https://carinafierro.github.io/amuse.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Famuse.html">VALIDATE</a></td>
       </tr>
       <tr>
-        <th>Template Page</th>
+        <th class="rowheader">Template Page</th>
         <td><a href="https://carinafierro.github.io/template.html">"https://carinafierro.github.io/template.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Ftemplate.html">VALIDATE</a></td>
       </tr>
       <tr>
-        <th>Home Page</th>
+        <th class="rowheader">Home Page</th>
         <td><a href="https://carinafierro.github.io/index.html">"https://carinafierro.github.io/index.html"</a></td>
         <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcarinafierro.github.io%2Findex.html">VALIDATE</a></td>
       </tr>
     </table>
+    <h1>Other</h1>
+    <a href="index.html">HOME</a>
   </body>
 </html> 
