--- a/superhero.html
+++ b/superhero.html
@@ -19,7 +19,12 @@
         <th>Supergirl</th>
         <td>Kara Zor-El</td>
         <td><a href="images/supergirl.jpg"><img src="images/supergirl.jpg" alt="pic of Supergirl"></a></td>
-        <td>Heat Vision</td>
+        <td>
+          <ul>
+              <li>Heat Vision</li>
+              <li>Speed</li>
+          </ul>
+        </td>
         <td>
           <ul>
               <li>Magic</li>
@@ -31,7 +36,12 @@
         <th>Superman</th>
         <td>Clark Kent</td>
         <td><a href="images/superman.jpg"><img src="images/superman.jpg" alt="pic of Superman"></a></td>
-        <td></td>
+        <td>
+          <ul>
+              <li>Unique vision (heat and x-ray)</li>
+              <li>Speed</li>
+          </ul>
+        </td>
         <td>
           <ul>
               <li>list something if needed</li>
