--- a/superhero.html
+++ b/superhero.html
@@ -50,13 +50,13 @@
         </td>
       </tr>
       <tr>
-        <th>Leonardo</th>
-        <td></td>
+        <th>Spiderman</th>
+        <td>Peter Benjamin Parker</td>
         <td><a href="images/leo.jpg"><img src="images/leo.jpg" alt="pic of Leonardo"></a></td>
-        <td></td>
+        <td>Water</td>
         <td>
           <ul>
-              <li>list something if needed</li>
+              <li>Spider Abilities</li>
               <li>list something if needed</li>
           </ul>
         </td>
