--- a/superhero.html
+++ b/superhero.html
@@ -62,8 +62,8 @@
         </td>
       </tr>
       <tr>
-        <th>Leonardo</th>
-        <td></td>
+        <th>Batman</th>
+        <td>Bruce Wayne</td>
         <td><a href="images/leo.jpg"><img src="images/leo.jpg" alt="pic of Leonardo"></a></td>
         <td></td>
         <td>
