--- a/superhero.html
+++ b/superhero.html
@@ -28,7 +28,6 @@
         <td>
           <ul>
               <li>Magic</li>
-              <li>list something if needed</li>
           </ul>
         </td>
       </tr>
@@ -52,23 +51,21 @@
       <tr>
         <th>Spiderman</th>
         <td>Peter Benjamin Parker</td>
-        <td><a href="images/leo.jpg"><img src="images/leo.jpg" alt="pic of Leonardo"></a></td>
+        <td><a href="images/spiderman.jpg"><img src="images/spiderman.jpg" alt="pic of Spiderman"></a></td>
         <td>Water</td>
         <td>
           <ul>
               <li>Spider Abilities</li>
-              <li>list something if needed</li>
           </ul>
         </td>
       </tr>
       <tr>
         <th>Batman</th>
         <td>Bruce Wayne</td>
-        <td><a href="images/leo.jpg"><img src="images/leo.jpg" alt="pic of Leonardo"></a></td>
+        <td><a href="images/batman.jpg"><img src="images/batman.jpg" alt="pic of Batman"></a></td>
         <td></td>
         <td>
           <ul>
-              <li>list something if needed</li>
               <li>list something if needed</li>
           </ul>
         </td>
