--- a/superhero.html
+++ b/superhero.html
@@ -25,11 +25,7 @@
               <li>Speed</li>
           </ul>
         </td>
-        <td>
-          <ul>
-              <li>Magic</li>
-          </ul>
-        </td>
+        <td>Magic</td>
       </tr>
       <tr>
         <th>Superman</th>
@@ -41,34 +37,21 @@
               <li>Speed</li>
           </ul>
         </td>
-        <td>
-          <ul>
-              <li>list something if needed</li>
-              <li>list something if needed</li>
-          </ul>
-        </td>
+        <td>Kryptonite</td>
       </tr>
       <tr>
         <th>Spiderman</th>
         <td>Peter Benjamin Parker</td>
         <td><a href="images/spiderman.jpg"><img src="images/spiderman.jpg" alt="pic of Spiderman"></a></td>
+        <td>Spider abilities/td>
         <td>Water</td>
-        <td>
-          <ul>
-              <li>Spider Abilities</li>
-          </ul>
-        </td>
       </tr>
       <tr>
         <th>Batman</th>
         <td>Bruce Wayne</td>
         <td><a href="images/batman.jpg"><img src="images/batman.jpg" alt="pic of Batman"></a></td>
-        <td></td>
-        <td>
-          <ul>
-              <li>list something if needed</li>
-          </ul>
-        </td>
+        <td>None but is strong</td>
+        <td>Magic</td>
       </tr>
     </table>
   </body>
