--- a/superhero.html
+++ b/superhero.html
@@ -43,14 +43,14 @@
         <th>Spiderman</th>
         <td>Peter Benjamin Parker</td>
         <td><a href="images/spiderman.jpg"><img src="images/spiderman.jpg" alt="pic of Spiderman"></a></td>
-        <td>Spider abilities/td>
+        <td>Spider abilities</td>
         <td>Water</td>
       </tr>
       <tr>
         <th>Batman</th>
         <td>Bruce Wayne</td>
         <td><a href="images/batman.jpg"><img src="images/batman.jpg" alt="pic of Batman"></a></td>
-        <td>None but is strong</td>
+        <td>Strong</td>
         <td>Magic</td>
       </tr>
     </table>
