--- a/superhero.html
+++ b/superhero.html
@@ -6,7 +6,7 @@
     <link href="css/superhero.css" rel="stylesheet"> 
   </head>
   <body>
-    <h1>Favorite Superheroes</h1>
+    <h1>Superheroes</h1>
     <table>
       <tr id="headerrow">
         <th>Name</th>
