--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Profile</title>  
+    <title>Profile</title>
+    <link href="css/main.css" rel="stylesheet">  
   </head>
   <body>
     <h1>Carina Fierro</h1>
