--- a/template.html
+++ b/template.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>TEMPLATE</title>  
+    <title>TEMPLATE</title>
+    <link href="css/main.css" rel="stylesheet">  
   </head>
   <body>
     <h1>Page Title</h1>
