--- a/amuse.html
+++ b/amuse.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Amuse Me</title>
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Funny Things Online</h1>
@@ -13,10 +14,10 @@
     <br><a href ="https://www.youtube.com/watch?v=92fD8Cy2zL0"> Nail Skit in Cartoon Version</a>
 
     <h2>This Actress Always Makes Me Laugh!</h2>
-    <p>I remember always watching<em>Mad Tv</em> when I was younger. Mrs. Swan was my favorite actress to watch, she was just super funny!</p>
+    <p>I remember always watching <em>Mad Tv</em> when I was younger. Mrs. Swan was my favorite actress to watch, she was just super funny!</p>
     <a href="https://www.youtube.com/watch?v=icrjok_q1UY"> Mrs. Swan goes to the movie theatre</a>
 
-    <h2>Mr.Bean</h2>
+    <h2>Mr. Bean</h2>
     <p>Mr.Bean is another one of my favorite shows. All of his episodes are just histerical! From his episodes on tv, to his movies, they always make you laugh until yout stomach hurts.</p>
     <a href="https://www.youtube.com/watch?v=HgDGUb2TjyM"> Mr.Bean in school</a>
     <br>
