--- a/inspire.html
+++ b/inspire.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Inspire Me</title>
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <h1>My Parents: The True Definition of a Hero</h1>
