--- a/superhero.html
+++ b/superhero.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Project 6</title>
-    <link href="css/superhero.css" rel="stylesheet"> 
+    <link href="css/superhero.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet"> 
   </head>
   <body>
     <h1>Superheroes</h1>
