--- a/search.html
+++ b/search.html
@@ -12,10 +12,12 @@
         <label for="selectfish">Select a Sea Animal:</label>
         <select name="q" id="selectfish">
           <option value="whale">Whale</option>
+          <option value="shrimp">Shrimp</option>
+          <option value="sea horse">WATCH OUT</option>
           <option value="dolphin">Dolphin</option>
           <option value="crab">Crab</option>
           <option value="krill">Krill</option>
-          <option value="shark">WATCH OUT</option>
+          <option value="shark">Shark</option>
         </select>
       </p>
       <p>
