--- a/search.html
+++ b/search.html
@@ -9,16 +9,20 @@
     <h1>Sea Search</h1>
     <form action="https://www.google.com/search" method="GET">
       <p>
-        <label for="selectfish">Select a Sea Animal:</label>
+        <label for="selectfish">Select a Sea Animal From Dropmenu:</label>
         <select name="q" id="selectfish">
           <option value="whale">Whale</option>
           <option value="shrimp">Shrimp</option>
-          <option value="sea horse">WATCH OUT</option>
+          <option value="sea horse">Sea Horse</option>
           <option value="dolphin">Dolphin</option>
           <option value="crab">Crab</option>
           <option value="krill">Krill</option>
           <option value="shark">Shark</option>
         </select>
+      </p>
+      <p>
+        <label for="radiopng">Video Search</label>
+        <input type="radio" name="as_filetype" value="vid" id="radiopng">
       </p>
       <p>
         <label for="radiopng">PNG</label>
