--- a/search.html
+++ b/search.html
@@ -21,8 +21,8 @@
         </select>
       </p>
       <p>
-        <label for="radiopng">Video Search</label>
-        <input type="radio" name="as_filetype" value="vid" id="radiopng">
+        <label for="video">Video Search</label>
+        <input type="radio" name="as_filetype" value="vid" id="video">
       </p>
       <p>
         <label for="radiopng">PNG</label>
