--- a/search.html
+++ b/search.html
@@ -21,20 +21,20 @@
         </select>
       </p>
       <p>
-        <label for="video">Video Search</label>
-        <input type="radio" name="as_filetype" value="vid" id="video">
+        <label for="video">Video</label>
+        <input type="radio" name="tbm" value="mp4" id="video">
       </p>
       <p>
-        <label for="radiopng">PNG</label>
-        <input type="radio" name="as_filetype" value="png" id="radiopng">
+        <label for="radiopng">GIF</label>
+        <input type="radio" name="as_filetype" value="gif" id="radiopng">
       </p>
       <p>
         <label for="radiopng">JPG</label>
         <input type="radio" name="as_filetype" value="jpg" id="radiopng">
       </p>
       <p>
-        <label for="radiopng">GIF</label>
-        <input type="radio" name="as_filetype" value="gif" id="radiopng">
+        <label for="radiopng">PNG</label>
+        <input type="radio" name="as_filetype" value="png" id="radiopng">
       </p>
       <p style="display:none">
         <label>Images</label>
