--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
       </p>
       <p>
         <label for="video">Video</label>
-        <input type="radio" name="tbm" value="mp4" id="video">
+        <input type="radio" name="tbm" value="vid" id="video">
       </p>
       <p>
         <label for="radiopng">GIF</label>
@@ -35,10 +35,6 @@
       <p>
         <label for="radiopng">PNG</label>
         <input type="radio" name="as_filetype" value="png" id="radiopng">
-      </p>
-      <p style="display:none">
-        <label>Images</label>
-        <input type="checkbox" name="tbm" value="isch" id="imagecheck" checked>
       </p>
       <p>
         <input type="submit">
