--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
         </select>
       </p>
       <p>
-        <label for="video">Video</label>
+        <label for="video">Videos</label>
         <input type="radio" name="tbm" value="vid" id="video">
       </p>
       <p>
@@ -33,8 +33,12 @@
         <input type="radio" name="as_filetype" value="jpg" id="radiopng">
       </p>
       <p>
-        <label for="radiopng">PNG</label>
+        <label for="radiopng">PNG'</label>
         <input type="radio" name="as_filetype" value="png" id="radiopng">
+      </p>
+      <p>
+        <label for="book">Books</label>
+        <input type="radio" name="tbm" value="bks" id="radiopng">
       </p>
       <p>
         <input type="submit">
