--- a/search.html
+++ b/search.html
@@ -33,12 +33,16 @@
         <input type="radio" name="as_filetype" value="jpg" id="radiopng">
       </p>
       <p>
-        <label for="radiopng">PNG'</label>
+        <label for="radiopng">PNG</label>
         <input type="radio" name="as_filetype" value="png" id="radiopng">
       </p>
       <p>
         <label for="book">Books</label>
         <input type="radio" name="tbm" value="bks" id="radiopng">
+      </p>
+      <p>
+        <label for="documents">Documents</label>
+        <input type="radio" name="as_qdr" value="all" id="radiopng">
       </p>
       <p>
         <input type="submit">
