--- a/search.html
+++ b/search.html
@@ -25,8 +25,8 @@
         <input type="radio" name="tbm" value="vid" id="video">
       </p>
       <p>
-        <label for="radiopng">GIF</label>
-        <input type="radio" name="as_filetype" value="gif" id="radiopng">
+        <label for="gif">GIF</label>
+        <input type="radio" name="as_filetype" value="gif" id="gif">
       </p>
       <p>
         <label for="radiopng">JPG</label>
@@ -42,7 +42,7 @@
       </p>
       <p>
         <label for="documents">Documents</label>
-        <input type="radio" name="as_qdr" value="all" id="radiopng">
+        <input type="radio" name="as_oq" value="all" id="radiopng">
       </p>
       <p>
         <input type="submit">
