--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
     <h1>Sea Search</h1>
     <form action="https://www.google.com/search" method="GET">
       <p>
-        <label for="selectfish">Select a Sea Animal From Dropmenu:</label>
+        <label for="selectfish">Select a Sea Animal from the Dropmenu:</label>
         <select name="q" id="selectfish">
           <option value="whale">Whale</option>
           <option value="shrimp">Shrimp</option>
@@ -25,8 +25,8 @@
         <input type="radio" name="tbm" value="vid" id="video">
       </p>
       <p>
-        <label for="gif">GIF</label>
-        <input type="radio" name="as_filetype" value="gif" id="gif">
+        <label for="radiopng">GIF</label>
+        <input type="radio" name="as_filetype" value="gif" id="radiopng">
       </p>
       <p>
         <label for="radiopng">JPG</label>
@@ -41,7 +41,7 @@
         <input type="radio" name="tbm" value="bks" id="radiopng">
       </p>
       <p>
-        <label for="documents">Documents</label>
+        <label for="strengths">Strengths</label>
         <input type="radio" name="as_oq" value="all" id="radiopng">
       </p>
       <p>
