--- a/search.html
+++ b/search.html
@@ -41,7 +41,7 @@
         <input type="radio" name="tbm" value="bks" id="radiopng">
       </p>
       <p>
-        <label for="strengths">Strengths</label>
+        <label for="types">Types</label>
         <input type="radio" name="as_oq" value="all" id="radiopng">
       </p>
       <p>
