--- a/search.html
+++ b/search.html
@@ -45,6 +45,10 @@
         <input type="radio" name="as_oq" value="all" id="radiopng">
       </p>
       <p>
+        <label for="size">Size</label>
+        <input type="radio" name="as_epq" value="all" id="radiopng">
+      </p>
+      <p>
         <input type="submit">
       </p>
     </form>
