--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
       </p>
       <p>
         <label for="size">Size</label>
-        <input type="radio" name="as_epq" value="all" id="radiopng">
+        <input type="radio" name="as_occtbody" value="all" id="radiopng">
       </p>
       <p>
         <input type="submit">
