--- a/search.html
+++ b/search.html
@@ -49,6 +49,11 @@
         <input type="radio" name="as_occt=body" value="all" id="radiopng">
       </p>
       <p>
+        <label for="news">News</label>
+        <input type="radio" name="as_occt=body" value="all" id="radiopng">
+      </p>
+      <p>
+      <p>
         <input type="submit">
       </p>
     </form>
