--- a/search.html
+++ b/search.html
@@ -50,7 +50,7 @@
       </p>
       <p>
         <label for="news">News</label>
-        <input type="radio" name="as_occt=body" value="all" id="radiopng">
+        <input type="radio" name="as_occt=title" value="all" id="radiopng">
       </p>
       <p>
       <p>
