--- a/search.html
+++ b/search.html
@@ -49,8 +49,8 @@
         <input type="radio" name="as_occt=body" value="all" id="radiopng">
       </p>
       <p>
-        <label for="cpuntry">Country</label>
-        <input type="radio" name="cr" value="all" id="radiopng">
+        <label for="mexico">Country (Mexico)</label>
+        <input type="radio" name="cr=countryMX" value="all" id="radiopng">
       </p>
       <p>
       <p>
