--- a/search.html
+++ b/search.html
@@ -50,7 +50,7 @@
       </p>
       <p>
         <label for="mexico">Country (Mexico)</label>
-        <input type="radio" name="cr=countryMX" value="all" id="radiopng">
+        <input type="radio" name="cr" value="cr=countryMX" id="radiopng">
       </p>
       <p>
       <p>
