--- a/search.html
+++ b/search.html
@@ -49,10 +49,13 @@
         <input type="radio" name="as_occt=body" value="all" id="radiopng">
       </p>
       <p>
+        <label for="united states">Country (US)</label>
+        <input type="radio" name="cr" value="countryUS" id="radiopng">
+      </p>
+      <p>
         <label for="mexico">Country (Mexico)</label>
         <input type="radio" name="cr" value="countryMX" id="radiopng">
       </p>
-      <p>
       <p>
         <input type="submit">
       </p>
