--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
       </p>
       <p>
         <label for="size">Size</label>
-        <input type="radio" name="as_occt=body" value="all" id="radiopng">
+        <input type="radio" name="as_occt=body" value="allintext" id="radiopng">
       </p>
       <p>
         <label for="united states">Country (US)</label>
