--- a/search.html
+++ b/search.html
@@ -50,11 +50,11 @@
       </p>
       <p>
         <label for="united states">Country (US)</label>
-        <input type="radio" name="cr" value="countryUS" id="radiopng">
+        <input type="checkbox" name="cr" value="all" id="radiopng" checked>
       </p>
       <p>
         <label for="mexico">Country (Mexico)</label>
-        <input type="radio" name="cr" value="countryMX" id="radiopng">
+        <input type="checkbox" name="cr" value="countryMX" id="radiopng">
       </p>
       <p>
         <input type="submit">
