--- a/search.html
+++ b/search.html
@@ -13,11 +13,19 @@
         <select name="q" id="selectfish">
           <option value="whale">Whale</option>
           <option value="shrimp">Shrimp</option>
+          <option value="dragonfish">Dragonfish</option>
           <option value="sea horse">Sea Horse</option>
           <option value="dolphin">Dolphin</option>
           <option value="crab">Crab</option>
           <option value="krill">Krill</option>
           <option value="shark">Shark</option>
+          <option value="starfish">Starfish</option>
+          <option value="turtle">Turtle</option>
+          <option value="piranha">Piranha</option>
+          <option value="squid">Squid</option>
+          <option value="jellyfish">Jellyfish</option>
+          <option value="octopus">Octopus</option>
+          <option value="stingray">Stringray</option>
         </select>
       </p>
       <p>
