--- a/search.html
+++ b/search.html
@@ -58,7 +58,7 @@
       </p>
       <p>
         <label for="united states">Country (US)</label>
-        <input type="checkbox" name="cr" value="all" id="radiopng" checked>
+        <input type="checkbox" name="cr" value="all" id="radiopng">
       </p>
       <p>
         <label for="mexico">Country (Mexico)</label>
