--- a/inspire.html
+++ b/inspire.html
@@ -7,7 +7,7 @@
     <body>
         <h1>My Parents: The True Definition of a Hero</h1>
         <h2>Why are my parents my heroes?</h2>
-        <p>To me. my parents are the perfect example/definition of a hero.</p>
+        <p>To me, my parents are the perfect example/definition of a hero.</p>
         <p>The reason that I admire these two marvelous and beautiful people, is because they are the best role models ever.</p>
         <p>Coming from a beautiful little town in Chihuahua, Mexico, they came to the U.S. not knowing the language or having many family members here.</p>
         <p>They gave my two older brothers and I, the best life.</p>
