--- a/resume/index.html
+++ b/resume/index.html
@@ -1,11 +1,53 @@
+<!--Resume Notes
+Contact Info
+  Cari Pink
+Education
+  MCC - Associates of Science
+  UNC - Bachelor's of Science in Biological Sciences, Bachelor's of Science in Software Engineering (current)
+Experience
+  Cashier
+  Waitress
+Skills
+  Windows, Coding languages (python, javascript, C#, html), laboratory experience
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>TEMPLATE</title>
-    <link href="css/main.css" rel="stylesheet">  
+    <title>Resume</title>
+    <link href="css/style.css" rel="stylesheet">  
   </head>
   <body>
-    <h1>Page Title</h1>
+    <h1>Cari Pink</h1>
+    <img src="images/avatarcharacter.jpg">
+    <nav>
+      <a href="contact.html#contact">Contact Info</a>
+      <a href="index.html#education">Education</a>
+      <a href="index.html#experience">Experience</a>
+      <a href="index.html#skills">Skills</a>
+    </nav>
+    <section id="contact">
+      <h2>Contact Information</h2>
+      <p>123-456-7890</p>
+      <p>email</p>
+    </section>
+    <section id="education">
+      <h2>Education & Training</h2>
+      <p>University Of Northern Colorado <span class="date">2022</span></p>
+      <p>Bachelor's of Science: Biological Sciences <span class="date">2022</span></p>
+    </section>
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <p>Coder</p>
+    </section>
+    <section id="skills">
+      <h2>Skills and Hobbies</h2>
+      <ul>
+        <li>Html</li>
+        <li>Python</li>
+        <li>Javascript</li>
+        <li>Html</li>
+      </ul>
+    </section>
   </body>
 </html> 
