--- a/resume/contact.html
+++ b/resume/contact.html
@@ -22,14 +22,32 @@ Skills
     <img src="images/avatarcharacter.jpg">
     <nav>
       <a href="#contact.html#contact">Contact Info</a>
-      <a href="#education">Education</a>
-      <a href="#experience">Experience</a>
-      <a href="#skills">Skills</a>
+      <a href="#contact.html#education">Education</a>
+      <a href="#contact.html#experience">Experience</a>
+      <a href="#contact.html#skills">Skills</a>
     </nav>
     <section id="contact">
       <h2>Contact Information</h2>
       <p>123-456-7890</p>
       <p>email</p>
+    </section>
+    <section id="education">
+      <h2>Education & Training</h2>
+      <p>University Of Northern Colorado <span class="date">2022</span></p>
+      <p>Bachelor's of Science: Biological Sciences <span class="date">2022</span></p>
+    </section>
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <p>Coder</p>
+    </section>
+    <section id="skills">
+      <h2>Skills and Hobbies</h2>
+      <ul>
+        <li>Html</li>
+        <li>Python</li>
+        <li>Javascript</li>
+        <li>Html</li>
+      </ul>
     </section>
   </body>
 </html> 
