--- a/resume/contact.html
+++ b/resume/contact.html
@@ -22,9 +22,9 @@ Skills
     <img src="images/avatarcharacter.jpg">
     <nav>
       <a href="#contact.html#contact">Contact Info</a>
-      <a href="#contact.html#education">Education</a>
-      <a href="#contact.html#experience">Experience</a>
-      <a href="#contact.html#skills">Skills</a>
+      <a href="#education">Education</a>
+      <a href="#experience">Experience</a>
+      <a href="#skills">Skills</a>
     </nav>
     <section id="contact">
       <h2>Contact Information</h2>
