--- a/resume/index.html
+++ b/resume/index.html
@@ -22,9 +22,21 @@ Skills
     <img src="images/avatarcharacter.jpg">
     <nav>
       <a href="contact.html#contact">Contact Info</a>
-      <a href="contact.html#education">Education</a>
-      <a href="contact.html#experience">Experience</a>
-      <a href="contact.html#skills">Skills</a>
+      <a href="#education">Education</a>
+      <a href="#experience">Experience</a>
+      <a href="#skills">Skills</a>
     </nav>
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <p>Coder</p>
+    </section>
+    <section id="skills">
+      <h2>Skills and Hobbies</h2>
+      <ul>
+        <li>Html</li>
+        <li>Python</li>
+        <li>Javascript</li>
+        <li>Html</li>
+      </ul>
   </body>
 </html> 
