--- a/resume/index.html
+++ b/resume/index.html
@@ -22,9 +22,9 @@ Skills
     <img src="images/avatarcharacter.jpg">
     <nav>
       <a href="contact.html#contact">Contact Info</a>
-      <a href="#education">Education</a>
-      <a href="#experience">Experience</a>
-      <a href="#skills">Skills</a>
+      <a href="index.html#education">Education</a>
+      <a href="index.html#experience">Experience</a>
+      <a href="index.html#skills">Skills</a>
     </nav>
     <section id="experience">
       <h2>Work Experience</h2>
