--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,11 @@ Skills
       <a href="index.html#experience">Experience</a>
       <a href="index.html#skills">Skills</a>
     </nav>
-    <section id="experience">
+    <section id="education">
+      <h2>Education & Training</h2>
+      <p>University of Northern Colorado <span class="date">2022</span></p>
+      <p>Bachelor's of Science: Biological Sciences <span class="date">2022</span></p>
+    </section>
       <h2>Work Experience</h2>
       <p>Coder</p>
     </section>
