--- a/superhero.html
+++ b/superhero.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 6</title>
     <link href="css/superhero.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet"> 
