--- a/superhero.html
+++ b/superhero.html
@@ -20,7 +20,7 @@
       <tr>
         <th>Supergirl</th>
         <td>Kara Zor-El</td>
-        <td><a href="images/supergirl.jpg"><img src="images/supergirl.jpg" alt="pic of Supergirl"></a></td>
+        <td><a href="images/supergirl.jpg"><img src="images/thumb_supergirl.jpg" alt="pic of Supergirl"></a></td>
         <td>
           <ul>
               <li>Heat Vision</li>
@@ -32,7 +32,7 @@
       <tr>
         <th>Superman</th>
         <td>Clark Kent</td>
-        <td><a href="images/superman.jpg"><img src="images/superman.jpg" alt="pic of Superman"></a></td>
+        <td><a href="images/superman.jpg"><img src="images/thumb_superman.jpg" alt="pic of Superman"></a></td>
         <td>
           <ul>
               <li>Unique vision (heat and x-ray)</li>
@@ -44,7 +44,7 @@
       <tr>
         <th>Spiderman</th>
         <td>Peter Benjamin Parker</td>
-        <td><a href="images/spiderman.jpg"><img src="images/thumb_spiderman.jpg" alt="pic of Spiderman"></a></td>
+        <td><a href="images/spiderman.jpg"><img src="images/spiderman.jpg" alt="pic of Spiderman"></a></td>
         <td>Spider abilities</td>
         <td>Water</td>
       </tr>
