--- a/superhero.html
+++ b/superhero.html
@@ -44,7 +44,7 @@
       <tr>
         <th>Spiderman</th>
         <td>Peter Benjamin Parker</td>
-        <td><a href="images/spiderman.jpg"><img src="images/spiderman.jpg" alt="pic of Spiderman"></a></td>
+        <td><a href="images/spiderman.jpg"><img src="images/thumb_spiderman.jpg" alt="pic of Spiderman"></a></td>
         <td>Spider abilities</td>
         <td>Water</td>
       </tr>
